@@ -1,3 +1,9 @@
+2009-08-31  Jason Merrill  <jason@redhat.com>
+
+	PR c++/41127
+	* g++.dg/parse/enum5.C: New.
+	* g++.dg/cpp0x/enum1.C: Adjust expected error.
+
 2009-08-31  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* gcc.dg/builtins-config.h (HAVE_C99_RUNTIME): Do not define
